overflow-fixed

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -7,6 +7,7 @@
     &-flags {
         display: flex; 
         margin-left: 10px;
+        overflow: hidden;
 
         &-flag {
             width: 25px;
