--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,6 +25,7 @@
 html {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 body {
